# internership

./: CMakeLists.txt  LICENSE  README.md
inc/: GY39.h  LED.h  MQ2.h  beep.h  bitmap.h  fonts.h  header.h  lcd.h  mode.h  serial.h  touch.h
inc/tmp/: font.h
lib/: CMakeLists.txt  GY39.c  LED.c  MQ2.c  beep.c  lcd.c  lcd_bitmap.c  lcd_tools.c  lcd_touch.c  serial.c
lib/tmp/: lcd_tools.c
src/: 2048.c  CMakeLists.txt  bitmap_math.c  main.c  show_bitmap.c  thread.c  thread.h
src/tmp/: gy39.c  main.c  systerm.c
